CSS changes to fix overflow and odd spacing issues on mobile. -JP

--- a/WebApp/src/app/app.component.css
+++ b/WebApp/src/app/app.component.css
@@ -21,7 +21,7 @@ a.hleft:hover, a.hleft:focus {
     align-items: center;
 } 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
     a.hleft {
         display: block;
         width: 80%;
